[tool.poetry]
name = "lib"
version = "0.1.0"
description = "personal library"
authors = ["Hengda Shi"]

[tool.poetry.dependencies]
python = "^3.8"
neovim = "^0.3.1"
neovim-remote = "^2.4.0"
wandb = "^0.12.7"
plotly = "^5.4.0"
kaggle = "^1.5.12"
lightgbm = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
