[tool.poetry]
name = "hengdalib"
version = "0.1.0"
description = "personal library"
authors = ["Hengda Shi"]

[tool.poetry.dependencies]
python = ">= 3.7, <= 3.9"
neovim = "^0.3.1"
neovim-remote = "^2.4.0"
wandb = "^0.12.7"
plotly = "^5.4.0"
kaggle = "^1.5.12"
lightgbm = "^3.3.1"
tensorflow = "^2.7.0"
pylint = "^2.12.1"
pandas = "^1.3.4"
lib = { git = "https://github.com/hengdashi/lib.git", branch = "main" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
