[tool.poetry]
name = "husky"
version = "0.1.0"
description = "husky is a collection of utility functions owned by Hengda Shi"
authors = ["Hengda Shi"]
packages = [
    { include = "husky" }
]

[tool.poetry.dependencies]
python = "~3.10"
tensorflow = "~2.9"
pandas = "~1.4"

[tool.poetry.dev-dependencies]
neovim = "*"
neovim-remote = "*"
pylint = "~2.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
